--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,11 @@ spring:
         # show_sql: true
         format_sql: true
 
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
 logging.level:
   org.hibernate.SQL: debug
 # org.hibernate.type: trace #??? ?? 2.x, hibernate5
-  org.hibernate.orm.jdbc.bind: trace #??? ?? 3.x, hibernate6
+# org.hibernate.orm.jdbc.bind: trace #??? ?? 3.x, hibernate6
